# OpenGL-Template

./: CMakeLists.txt
cmake/: LinkOpenFileDialog.cmake
engine/: CMakeLists.txt
engine/cmake/: LinkFT2.cmake  LinkGLAD.cmake  LinkGLM.cmake
engine/source/: main.cpp
engine/source/backnrenderer/: backnrenderer.h
engine/source/backnrenderer/back/: backend.cpp
engine/source/backnrenderer/renderer/: renderer.cpp
engine/source/fontrenderer/: fntrender.cpp  test.cpp
engine/source/gui/imgui/: imgui.cpp  imgui.h
engine/source/objloader/: objloader.cpp  objloader.h  objloadertest.cpp
resources/shaders/: text.fs.glsl  text.vs.glsl
source/: main.cpp
source/backnrenderer/: backnrenderer.h
source/backnrenderer/back/: backend.cpp
source/clioptions/: clioptions.h
source/fontrenderer/: backend.cpp  fntrender.cpp  fntrenderer.h  test.cpp
source/gui/imgui/: imgui.h  imgui_draw.cpp  imgui_internal.h
source/imgui/: imgui.cpp  imgui_demo.cpp  imgui_widgets.cpp
source/objloader/: objloader.cpp  objloader.h  objloadertest.cpp
source/shader/: shader.h
